# zxing-rs

./: .gitignore  Cargo.toml  README.md
hbar/: Cargo.toml
hbar-core/: Cargo.toml
hbar-core/src/: barcode_format.rs  binarizer.rs  binary_bitmap.rs  buffered_image.rs  decode_hint_type.rs  encode_hint_type.rs  error.rs  inverted_luminance_source.rs  lib.rs  luminance_source.rs  multi_format_reader.rs  multi_format_writer.rs  reader.rs  result.rs  result_metadata_type.rs  result_point.rs  types.rs  writer.rs  writer_exception.rs
hbar-core/src/common/: bit_array.rs  bit_matrix.rs  charset.rs  decoder_result.rs  global_histogram_binarizer.rs  hybrid_binarizer.rs  mod.rs  system_times.rs
hbar-core/src/common/detector/: math_utils.rs  mod.rs
hbar-core/src/common/reedsolomon/: generic_gf.rs  generic_gf_poly.rs  mod.rs  reed_solomon_decoder.rs  reed_solomon_encoder.rs
hbar-core/src/datamatrix/: datamatrix_writer.rs  mod.rs
hbar-core/src/qrcode/: mod.rs  qrcode_reader.rs  qrcode_writer.rs
hbar-core/src/qrcode/decoder/: bit_matrix_parser.rs  decoder.rs  error_correction_level.rs  format_information.rs  mod.rs  mode.rs  version.rs
hbar-core/src/qrcode/encoder/: block_pair.rs  byte_matrix.rs  encoder.rs  mask_util.rs  matrix_util.rs  mod.rs  qrcode.rs
ports/python/: main.py
src/: encoder.rs  encoder_config.rs  lib.rs  main.rs
