[package]
name = "zxing-rs"
version = "0.1.1"
edition = "2018"
license = "Apache-2.0"
description = "zxing-rs is an open-source, multi-format 1D/2D barcode image processing library implemented in Rust, with ports to other languages."

#[lib]
#crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name ="encode"
path ="src/encode/bin/main.rs"

[dependencies]
hbar-core = {path = "./hbar-core"}
structopt = "0.3.23"
